--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@
     border-radius: 20px;
     box-shadow: 5px 5px 10px hsl(28, 72%, 76%);
 }
+#smartphone{
+    margin: 45px 0 45px 0;
+}
+#laptop{
+    margin-top: 45px 0 45px 0;
+}
 /*card section end*/
 
 /*footer*/
